fixed spacing

--- a/Home.css
+++ b/Home.css
@@ -443,8 +443,8 @@
 
   .u-section-2 .u-list-1 {
     width: 540px;
-    margin-top: -501px;
-    margin-left: calc(((100% - 540px) / 2));
+    margin-top: -100px;
+    margin-left: auto;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -510,7 +510,7 @@
 
 @media (max-width: 575px) {
   .u-section-2 {
-    min-height: 1241px;
+    min-height: 1431px;
   }
 
   .u-section-2 .u-image-1 {
@@ -522,8 +522,8 @@
 
   .u-section-2 .u-list-1 {
     width: 340px;
-    margin-top: -308px;
-    margin-left: calc(((100% - 340px) / 2));
+    margin-bottom: 60px;
+    margin-left: calc(((100% - 340px) / 2) + -1px);
   }
 
   .u-section-2 .u-repeater-1 {
@@ -570,7 +570,6 @@
   margin-top: 0;
   margin-bottom: 0;
   min-height: 122px;
-  height: auto;
 }
 
 .u-section-3 .u-container-layout-1 {
@@ -612,7 +611,6 @@
   .u-section-3 .u-group-1 {
     margin-top: -7px;
     min-height: 150px;
-    height: auto;
   }
 
   .u-section-3 .u-text-1 {
@@ -627,8 +625,9 @@
   }
 
   .u-section-3 .u-text-3 {
-    margin-left: calc(((100% - 940px) / 2));
-    margin-right: calc(((100% - 940px) / 2));
+    width: auto;
+    margin-left: 50px;
+    margin-right: 50px;
   }
 
   .u-section-3 .u-text-4 {
@@ -645,7 +644,7 @@
 
 @media (max-width: 991px) {
   .u-section-3 {
-    min-height: 555px;
+    min-height: 585px;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -670,6 +669,11 @@
   }
 
   .u-section-3 .u-text-4 {
+    margin-left: calc(((100% - 720px) / 2));
+    margin-right: calc(((100% - 720px) / 2));
+  }
+
+  .u-section-3 .u-text-5 {
     margin-left: calc(((100% - 720px) / 2));
     margin-right: calc(((100% - 720px) / 2));
   }
@@ -710,11 +714,16 @@
     margin-left: calc(((100% - 540px) / 2));
     margin-right: calc(((100% - 540px) / 2));
   }
+
+  .u-section-3 .u-text-5 {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-3 {
-    min-height: 786px;
+    min-height: 816px;
   }
 
   .u-section-3 .u-group-1 {
@@ -745,7 +754,7 @@
   }
 
   .u-section-3 .u-text-5 {
-    margin-left: calc(((100% - 1140px) / 2) + 400px);
-    margin-right: calc(((100% - 1140px) / 2) + 400px);
+    width: 340px;
+    margin: 18px auto 56px;
   }
 }
