--- a/nicepage.css
+++ b/nicepage.css
@@ -33772,8 +33772,9 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-image-1 {
-    width: 61px;
     margin-top: 26px;
+    width: auto;
+    height: auto;
   }
 
   .u-header .u-social-icons-1 {
